--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -736,8 +736,8 @@ p, li, ul, ol, dl, dt, dd {
 
 p {
     @extend %margins;
-    text-indent: 6rem; /* Sem 'text-align: justify', usar: 4px. Com 'text-align: justify', usar: 6px.  */
-    text-align: justify;
+    text-indent: 4rem; /* Sem 'text-align: justify', usar: 4px. Com 'text-align: justify', usar: 6px.  */
+    // text-align: justify;
 }
 
 ul, ol {
